--- a/main.ipynb
+++ b/main.ipynb
@@ -2,12 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "from segmentation_models.transformers import Swin_Unet\n",
-    "from segmentation_models.metrics import iou_score\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import cv2"
@@ -278,6 +277,195 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from segmentation_models.convnext import UNext"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "model = UNext()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"ConvNextUnet\"\n",
+      "__________________________________________________________________________________________________\n",
+      " Layer (type)                   Output Shape         Param #     Connected to                     \n",
+      "==================================================================================================\n",
+      " Input (InputLayer)             [(None, 256, 256, 3  0           []                               \n",
+      "                                )]                                                                \n",
+      "                                                                                                  \n",
+      " PatchEmbedding (Conv2D)        (None, 64, 64, 96)   4704        ['Input[0][0]']                  \n",
+      "                                                                                                  \n",
+      " first_LayerNorm (LayerNormaliz  (None, 64, 64, 96)  192         ['PatchEmbedding[0][0]']         \n",
+      " ation)                                                                                           \n",
+      "                                                                                                  \n",
+      " stage_0_ConvNextBlock_0 (ConvN  (None, 64, 64, 96)  79200       ['first_LayerNorm[0][0]']        \n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_0_ConvNextBlock_1 (ConvN  (None, 64, 64, 96)  79200       ['stage_0_ConvNextBlock_0[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_0_ConvNextBlock_2 (ConvN  (None, 64, 64, 96)  79200       ['stage_0_ConvNextBlock_1[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_0_DownSample (Conv2D)    (None, 32, 32, 192)  73920       ['stage_0_ConvNextBlock_2[0][0]']\n",
+      "                                                                                                  \n",
+      " stage_0_LayerNorm (LayerNormal  (None, 32, 32, 192)  384        ['stage_0_DownSample[0][0]']     \n",
+      " ization)                                                                                         \n",
+      "                                                                                                  \n",
+      " stage_1_ConvNextBlock_0 (ConvN  (None, 32, 32, 192)  305856     ['stage_0_LayerNorm[0][0]']      \n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_1_ConvNextBlock_1 (ConvN  (None, 32, 32, 192)  305856     ['stage_1_ConvNextBlock_0[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_1_ConvNextBlock_2 (ConvN  (None, 32, 32, 192)  305856     ['stage_1_ConvNextBlock_1[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_1_DownSample (Conv2D)    (None, 16, 16, 384)  295296      ['stage_1_ConvNextBlock_2[0][0]']\n",
+      "                                                                                                  \n",
+      " stage_1_LayerNorm (LayerNormal  (None, 16, 16, 384)  768        ['stage_1_DownSample[0][0]']     \n",
+      " ization)                                                                                         \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_0 (ConvN  (None, 16, 16, 384)  1201536    ['stage_1_LayerNorm[0][0]']      \n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_1 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_0[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_2 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_1[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_3 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_2[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_4 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_3[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_5 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_4[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_6 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_5[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_7 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_6[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_ConvNextBlock_8 (ConvN  (None, 16, 16, 384)  1201536    ['stage_2_ConvNextBlock_7[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_2_DownSample (Conv2D)    (None, 8, 8, 768)    1180416     ['stage_2_ConvNextBlock_8[0][0]']\n",
+      "                                                                                                  \n",
+      " stage_2_LayerNorm (LayerNormal  (None, 8, 8, 768)   1536        ['stage_2_DownSample[0][0]']     \n",
+      " ization)                                                                                         \n",
+      "                                                                                                  \n",
+      " stage_3_ConvNextBlock_0 (ConvN  (None, 8, 8, 768)   4762368     ['stage_2_LayerNorm[0][0]']      \n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_3_ConvNextBlock_1 (ConvN  (None, 8, 8, 768)   4762368     ['stage_3_ConvNextBlock_0[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " stage_3_ConvNextBlock_2 (ConvN  (None, 8, 8, 768)   4762368     ['stage_3_ConvNextBlock_1[0][0]']\n",
+      " extBlock)                                                                                        \n",
+      "                                                                                                  \n",
+      " decoder_stage_0_embed_1 (Dense  (None, 8, 8, 384)   295296      ['stage_3_ConvNextBlock_2[0][0]']\n",
+      " )                                                                                                \n",
+      "                                                                                                  \n",
+      " decoder_stage_0_Upsampling2D (  (None, 16, 16, 384)  0          ['decoder_stage_0_embed_1[0][0]']\n",
+      " UpSampling2D)                                                                                    \n",
+      "                                                                                                  \n",
+      " decoder_stage_0_Concatenate (C  (None, 16, 16, 768)  0          ['decoder_stage_0_Upsampling2D[0]\n",
+      " oncatenate)                                                     [0]',                            \n",
+      "                                                                  'stage_2_ConvNextBlock_8[0][0]']\n",
+      "                                                                                                  \n",
+      " decoder_stage_0_embed_2 (Dense  (None, 16, 16, 384)  295296     ['decoder_stage_0_Concatenate[0][\n",
+      " )                                                               0]']                             \n",
+      "                                                                                                  \n",
+      " decoder_stage_0_ConvNext_block  (None, 16, 16, 384)  1201536    ['decoder_stage_0_embed_2[0][0]']\n",
+      " _1 (ConvNextBlock)                                                                               \n",
+      "                                                                                                  \n",
+      " decoder_stage_0_ConvNext_block  (None, 16, 16, 384)  1201536    ['decoder_stage_0_ConvNext_block_\n",
+      " _2 (ConvNextBlock)                                              1[0][0]']                        \n",
+      "                                                                                                  \n",
+      " decoder_stage_1_embed_1 (Dense  (None, 16, 16, 192)  73920      ['decoder_stage_0_ConvNext_block_\n",
+      " )                                                               2[0][0]']                        \n",
+      "                                                                                                  \n",
+      " decoder_stage_1_Upsampling2D (  (None, 32, 32, 192)  0          ['decoder_stage_1_embed_1[0][0]']\n",
+      " UpSampling2D)                                                                                    \n",
+      "                                                                                                  \n",
+      " decoder_stage_1_Concatenate (C  (None, 32, 32, 384)  0          ['decoder_stage_1_Upsampling2D[0]\n",
+      " oncatenate)                                                     [0]',                            \n",
+      "                                                                  'stage_1_ConvNextBlock_2[0][0]']\n",
+      "                                                                                                  \n",
+      " decoder_stage_1_embed_2 (Dense  (None, 32, 32, 192)  73920      ['decoder_stage_1_Concatenate[0][\n",
+      " )                                                               0]']                             \n",
+      "                                                                                                  \n",
+      " decoder_stage_1_ConvNext_block  (None, 32, 32, 192)  305856     ['decoder_stage_1_embed_2[0][0]']\n",
+      " _1 (ConvNextBlock)                                                                               \n",
+      "                                                                                                  \n",
+      " decoder_stage_1_ConvNext_block  (None, 32, 32, 192)  305856     ['decoder_stage_1_ConvNext_block_\n",
+      " _2 (ConvNextBlock)                                              1[0][0]']                        \n",
+      "                                                                                                  \n",
+      " decoder_stage_2_embed_1 (Dense  (None, 32, 32, 96)  18528       ['decoder_stage_1_ConvNext_block_\n",
+      " )                                                               2[0][0]']                        \n",
+      "                                                                                                  \n",
+      " decoder_stage_2_Upsampling2D (  (None, 64, 64, 96)  0           ['decoder_stage_2_embed_1[0][0]']\n",
+      " UpSampling2D)                                                                                    \n",
+      "                                                                                                  \n",
+      " decoder_stage_2_Concatenate (C  (None, 64, 64, 192)  0          ['decoder_stage_2_Upsampling2D[0]\n",
+      " oncatenate)                                                     [0]',                            \n",
+      "                                                                  'stage_0_ConvNextBlock_2[0][0]']\n",
+      "                                                                                                  \n",
+      " decoder_stage_2_embed_2 (Dense  (None, 64, 64, 96)  18528       ['decoder_stage_2_Concatenate[0][\n",
+      " )                                                               0]']                             \n",
+      "                                                                                                  \n",
+      " decoder_stage_2_ConvNext_block  (None, 64, 64, 96)  79200       ['decoder_stage_2_embed_2[0][0]']\n",
+      " _1 (ConvNextBlock)                                                                               \n",
+      "                                                                                                  \n",
+      " decoder_stage_2_ConvNext_block  (None, 64, 64, 96)  79200       ['decoder_stage_2_ConvNext_block_\n",
+      " _2 (ConvNextBlock)                                              1[0][0]']                        \n",
+      "                                                                                                  \n",
+      " decoder_final_Upsampling2D (Up  (None, 256, 256, 96  0          ['decoder_stage_2_ConvNext_block_\n",
+      " Sampling2D)                    )                                2[0][0]']                        \n",
+      "                                                                                                  \n",
+      " decoder_final_Conv2D (Conv2D)  (None, 256, 256, 48  41520       ['decoder_final_Upsampling2D[0][0\n",
+      "                                )                                ]']                              \n",
+      "                                                                                                  \n",
+      " decoder_final_LayerNormalizati  (None, 256, 256, 48  96         ['decoder_final_Conv2D[0][0]']   \n",
+      " on (LayerNormalization)        )                                                                 \n",
+      "                                                                                                  \n",
+      " decoder_output (Conv2D)        (None, 256, 256, 3)  147         ['decoder_final_LayerNormalizatio\n",
+      "                                                                 n[0][0]']                        \n",
+      "                                                                                                  \n",
+      "==================================================================================================\n",
+      "Total params: 31,803,747\n",
+      "Trainable params: 31,803,747\n",
+      "Non-trainable params: 0\n",
+      "__________________________________________________________________________________________________\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -300,7 +488,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.7 | packaged by conda-forge | (default, Sep 29 2021, 19:15:42) [MSC v.1916 64 bit (AMD64)]"
   },
   "orig_nbformat": 4,
   "vscode": {
