--- a/main.ipynb
+++ b/main.ipynb
@@ -6,12 +6,12 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from segmentation_models.transformers import Swin_Unet\n",
+    "from core.transformers import Swin_Unet\n",
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "import cv2\n",
-    "from segmentation_models import blocks\n",
-    "from segmentation_models.metrics import BinaryIoU, FScore, MeanIoU"
+    "from core import blocks\n",
+    "from core.metrics import BinaryIoU, FScore, MeanIoU"
    ]
   },
   {
@@ -192,6 +192,7 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
    "source": [
